--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,9 +1,10 @@
-$BgHeader : #425f9b;
+$BgHeader : #181818;
 $BgMiddleBoard: linear-gradient(192deg, #E0E4F0, #E0E4F9 72%);
 $BgLeftSideBar:#6b7c93;
 $BgRightSideBar:rgba(246,249,252,1);
-$BGLeftCard:#2C3242 ;
-
+$BGLeftCard:#2C3242;
+$BgFooter:#181818;
+$BGFooterTextColor:#b3b3b3;
 
 $modalLabelColor:#111111;
 $inputFocusBorder:#007bff;
