--- a/src/styles/AboutStyles.css
+++ b/src/styles/AboutStyles.css
@@ -371,14 +371,14 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   font-weight: bold;
   margin-bottom: 60px; }
 
-.modal-content {
-  border-radius: 0 15px 0 15px !important;
-  border: 0 !important;
-  font-family: "Montserrat", sans-serif; }
-  .modal-content .modal-title {
-    text-transform: uppercase; }
-  .modal-content label {
-    font-size: 13px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400;
-    color: #111111; }
+.about-wrapper {
+  padding: 60px 0 135px; }
+
+.about-content p {
+  margin-bottom: 35px; }
+
+.about-content h4 {
+  color: #ff8500;
+  font-weight: bold;
+  font-size: 18px;
+  margin-bottom: 30px; }
