--- a/src/styles/FooterStyles.css
+++ b/src/styles/FooterStyles.css
@@ -364,15 +364,22 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   90% {
     box-shadow: 0px 0px 2px 7px rgba(173, 0, 0, 0); } }
 
+.page-heading {
+  color: #002e47;
+  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  margin-bottom: 60px; }
+
 footer {
   width: 100%;
-  background-color: #425f9b;
-  padding: 10px 0;
+  background-color: #181818;
+  padding: 20px 0;
   position: relative;
   font-family: "Montserrat", sans-serif; }
-  footer p {
+  footer .contact-details {
     font-family: inherit;
-    color: #a9b3c7;
+    color: #b3b3b3;
     font-size: 12px;
     font-weight: 500;
     margin-bottom: 0;
