--- a/src/styles/HeaderStyles.css
+++ b/src/styles/HeaderStyles.css
@@ -364,10 +364,17 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   90% {
     box-shadow: 0px 0px 2px 7px rgba(173, 0, 0, 0); } }
 
+.page-heading {
+  color: #002e47;
+  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  margin-bottom: 60px; }
+
 .header-wrapper {
   width: 100%;
-  height: 50px;
-  background-color: #425f9b;
+  height: 60px;
+  background-color: #181818;
   display: flex;
   flex-direction: row;
   align-items: center;
