--- a/src/styles/_commonStyle.scss
+++ b/src/styles/_commonStyle.scss
@@ -394,3 +394,11 @@ input:-moz-placeholder,textarea::-moz-placeholder { /* Firefox 18- */
   		box-shadow: 0px 0px 2px 7px rgba(173,0,0,0);
   	}
   }
+
+.page-heading{
+  color:#002e47;
+  font-size:24px;
+  font-family:$fontFamily;
+  font-weight:bold;
+  margin-bottom:60px;
+}
