Forgot Password UI and color changes

--- a/src/styles/AboutStyles.scss
+++ b/src/styles/AboutStyles.scss
@@ -2,7 +2,7 @@
 $pad10:10px;
 $pad25:25px;
 .about-wrapper{
-    padding:60px 0 135px;
+    padding:60px 0;
 }
 .about-content p{
     margin-bottom: 35px;
