--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,9 +1,9 @@
-$BgHeader : #181818;
+$BgHeader : #002e47;
 $BgMiddleBoard: linear-gradient(192deg, #E0E4F0, #E0E4F9 72%);
 $BgLeftSideBar:#6b7c93;
 $BgRightSideBar:rgba(246,249,252,1);
 $BGLeftCard:#2C3242;
-$BgFooter:#181818;
+$BgFooter:#002e47;
 $BGFooterTextColor:#b3b3b3;
 
 $modalLabelColor:#111111;
