--- a/src/styles/ContactStyle.css
+++ b/src/styles/ContactStyle.css
@@ -45,15 +45,6 @@ video {
   background-color: #E7E7E7;
   color: #111111; }
 
-.see-more-less-btn {
-  font-size: 14px;
-  font-weight: 400;
-  border-width: 0px;
-  font-family: "Montserrat", sans-serif;
-  background: transparent;
-  color: #6b7c93;
-  padding: 5px 0 0; }
-
 .main-btn-sm {
   padding: 0px 0px;
   height: 30px;
@@ -194,117 +185,60 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   color: rgba(44, 50, 66, 0.35);
   opacity: 1; }
 
-.card-data-information {
-  border-radius: 4px;
-  padding: 40px 20px;
-  background: #ffffff;
-  width: 100%;
-  max-width: 850px;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 #cfd7df;
-  -webkit-transition: box-shadow 150ms ease;
-  transition: box-shadow 150ms ease; }
-  .card-data-information h4 {
-    color: rgba(44, 50, 66, 0.85);
-    font-size: 15px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 400;
-    line-height: 1;
-    margin-bottom: 0; }
-
-.tube-card {
-  background: #ffffff;
-  border-radius: 4px;
-  padding: 10px;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 #cfd7df;
-  -webkit-transition: box-shadow 150ms ease;
-  transition: box-shadow 150ms ease; }
-  .tube-card.gap-bottom {
-    margin-bottom: 10px; }
-  .tube-card .field-card:not(:last-child) {
-    margin-bottom: 20px; }
-
-.spin-counter button {
-  border-radius: 4px;
-  padding: 7px 12px;
-  font-size: 17px;
-  cursor: pointer;
-  border: 1px solid #dad8de;
-  background: transparent;
-  line-height: 13px;
-  color: rgba(44, 50, 66, 0.65);
-  position: relative;
-  top: 1px; }
-
-.spin-counter .spin-down {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border-right: 0; }
-
-.spin-counter .input-box-wrapper {
-  border: 1px solid #dad8de;
-  height: 35px;
-  border-radius: 0;
-  width: 135px;
-  padding: 0 10px;
-  font-size: 13px;
-  color: rgba(44, 50, 66, 0.35); }
-  .spin-counter .input-box-wrapper:focus {
-    color: rgba(44, 50, 66, 0.75); }
-
-.spin-counter .spin-up {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  border-left: 0; }
-
 .resize-none {
   resize: none; }
-
-.react-calendar__tile--active {
-  background: rgba(44, 50, 66, 0.98); }
-
-.react-date-picker {
-  width: 100%; }
-
-.react-date-picker__button {
-  border: 1px solid #dad8de;
-  background: transparent;
-  color: rgba(44, 50, 66, 0.85);
-  font-size: 13px;
-  transition: box-shadow .12s ease-in,border .12s ease-in;
-  line-height: 1.5;
-  padding: 3px 10px;
-  width: 100%;
-  border-radius: 4px; }
-  .react-date-picker__button:hover, .react-date-picker__button:focus {
-    border-color: rgba(44, 50, 66, 0.95); }
-  .react-date-picker__button .react-date-picker__button__icon svg {
-    padding: 2px 0 1px; }
-  .react-date-picker__button .react-date-picker__button__icon:enabled:hover svg g {
-    stroke: #d9bea3; }
 
 .border-input {
   height: 35px;
   width: 100%;
-  border: 1px solid #dad8de;
+  border-width: 0 0 1px 0;
+  border-style: solid;
+  border-color: #dad8de;
   font-size: 13px;
-  border-radius: 4px;
+  border-radius: 0;
   color: rgba(44, 50, 66, 0.35);
   padding: 0 8px; }
-  .border-input:focus, .border-input:hover {
+  .border-input:focus {
     color: rgba(44, 50, 66, 0.75);
     border-color: rgba(44, 50, 66, 0.95); }
+
+.border-input ~ .focus-border {
+  position: absolute;
+  bottom: -1px;
+  left: 50%;
+  width: 0;
+  height: 2px;
+  z-index: 99;
+  background-color: #3399FF;
+  transition: 0.4s; }
+
+.border-input:focus ~ .focus-border {
+  width: 100%;
+  transition: 0.4s;
+  left: 0; }
+
+.form-group {
+  position: relative; }
 
 .form-control {
   border-color: #dad8de; }
   .form-control:focus {
     border-color: #485169 !important;
     box-shadow: none !important; }
+
+.page-heading {
+  color: #002e47;
+  font-size: 24px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  margin-bottom: 60px; }
+
+.modal-link {
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  color: #002e47;
+  cursor: pointer;
+  font-weight: 500; }
 
 @-webkit-keyframes fadeIn {
   from {
@@ -364,21 +298,8 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   90% {
     box-shadow: 0px 0px 2px 7px rgba(173, 0, 0, 0); } }
 
-.page-heading {
-  color: #002e47;
-  font-size: 24px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: bold;
-  margin-bottom: 60px; }
-
-.modal-link {
-  font-size: 14px;
-  font-family: "Montserrat", sans-serif;
-  color: #1a88d4;
-  cursor: pointer; }
-
 .contact-wrapper {
-  padding: 60px 0 135px; }
+  padding: 60px 0; }
 
 .contact-row .form-wrapper {
   padding-right: 80px; }
@@ -389,7 +310,8 @@ input:-moz-placeholder, textarea::-moz-placeholder {
 .contact-row input, .contact-row textarea {
   width: 100%;
   border-width: 0 0 1px 0;
-  border-color: #c3c3c3; }
+  border-color: #c3c3c3;
+  border-style: solid; }
 
 .contact-row textarea {
   resize: vertical; }
