border animation and footer UI

--- a/src/styles/ContactStyle.css
+++ b/src/styles/ContactStyle.css
@@ -34,7 +34,7 @@ video {
   border-radius: 3px;
   display: inline-block;
   border-width: 0px;
-  background: #ee521c;
+  background: #ff8500;
   color: #ffffff;
   transition: all .15s ease;
   cursor: pointer;
@@ -102,8 +102,7 @@ video {
 .main-btn:hover, .main-btn-sm:hover, .main-btn-sm:hover {
   transform: translateY(-2px) !important;
   -webkit-transform: translateY(-2px) !important;
-  -ms-transform: translateY(-2px) !important;
-  box-shadow: 0 8px 15px -8px rgba(0, 0, 0, 0.8); }
+  -ms-transform: translateY(-2px) !important; }
 
 .pad-0 {
   padding: 0 !important; }
@@ -163,7 +162,7 @@ video {
   width: 90px; }
 
 .error-limit, .error {
-  color: #FF0000 !important; }
+  color: red !important; }
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
@@ -199,8 +198,7 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   color: rgba(44, 50, 66, 0.35);
   padding: 0 8px; }
   .border-input:focus {
-    color: rgba(44, 50, 66, 0.75);
-    border-color: rgba(44, 50, 66, 0.95); }
+    color: rgba(44, 50, 66, 0.75); }
 
 .border-input ~ .focus-border {
   position: absolute;
@@ -209,7 +207,7 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   width: 0;
   height: 2px;
   z-index: 99;
-  background-color: #3399FF;
+  background-color: #ff8500;
   transition: 0.4s; }
 
 .border-input:focus ~ .focus-border {
@@ -221,9 +219,9 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   position: relative; }
 
 .form-control {
-  border-color: #dad8de; }
+  border-color: #575757; }
   .form-control:focus {
-    border-color: #485169 !important;
+    border-color: #007bff !important;
     box-shadow: none !important; }
 
 .page-heading {
@@ -239,6 +237,13 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   color: #002e47;
   cursor: pointer;
   font-weight: 500; }
+
+.password-visibility {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  cursor: pointer;
+  font-size: 20px; }
 
 @-webkit-keyframes fadeIn {
   from {
@@ -306,12 +311,6 @@ input:-moz-placeholder, textarea::-moz-placeholder {
 
 .contact-row .form-group {
   margin-bottom: 35px; }
-
-.contact-row input, .contact-row textarea {
-  width: 100%;
-  border-width: 0 0 1px 0;
-  border-color: #c3c3c3;
-  border-style: solid; }
 
 .contact-row textarea {
   resize: vertical; }
