--- a/src/styles/ContactStyle.scss
+++ b/src/styles/ContactStyle.scss
@@ -11,12 +11,12 @@ $pad25:25px;
     .form-group{
         margin-bottom:35px;
     }
-    input,textarea{
-        width:100%;
-        border-width:0 0 1px 0;
-        border-color:#c3c3c3;
-        border-style:solid;
-    }
+    // input,textarea{
+    //     width:100%;
+    //     border-width:0 0 1px 0;
+    //     border-color:#c3c3c3;
+    //     border-style:solid;
+    // }
     textarea{
         resize:vertical;
     }
