--- a/src/styles/ContactStyle.scss
+++ b/src/styles/ContactStyle.scss
@@ -11,6 +11,10 @@ $pad25:25px;
     .form-group{
         margin-bottom:35px;
     }
+    .map-wrapper{
+        width:100%;
+        height:100%;
+    }
     // input,textarea{
     //     width:100%;
     //     border-width:0 0 1px 0;
