--- a/src/styles/ContactStyle.css
+++ b/src/styles/ContactStyle.css
@@ -245,6 +245,12 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   cursor: pointer;
   font-size: 20px; }
 
+label {
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  color: #111111; }
+
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0; }
