--- a/src/styles/_commonStyle.scss
+++ b/src/styles/_commonStyle.scss
@@ -272,6 +272,13 @@ input:-moz-placeholder,textarea::-moz-placeholder { /* Firefox 18- */
   font-size:20px;
 }
 
+label {
+  font-size: 15px;
+  font-family: $fontFamily;
+  font-weight:$fontNormal;
+  color:$modalLabelColor;
+}
+
 @-webkit-keyframes fadeIn {
   from {
     opacity: 0;
