--- a/src/styles/AboutStyles.scss
+++ b/src/styles/AboutStyles.scss
@@ -4,12 +4,18 @@ $pad25:25px;
 .about-wrapper{
     padding:60px 0;
 }
-.about-content p{
-    margin-bottom: 35px;
-}
-.about-content h4{
-    color: #ff8500;
-    font-weight: bold;
-    font-size: 18px;
-    margin-bottom: 30px;
-}
+.about-content{
+    p{
+        margin-bottom: 25px;
+        font-family:$fontFamily;
+        font-size: 15px;
+        line-height: 26px;
+    }
+    h4{
+        color: #ff8500;
+        font-family:$fontFamily;
+        font-weight:$fontBold;
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+} 
