--- a/src/styles/ModalStyles.css
+++ b/src/styles/ModalStyles.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Arimo:400,700");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700");
+body {
+  font-family: "Montserrat", sans-serif; }
+
 .width-100 {
   max-width: 100%; }
 
@@ -195,10 +198,10 @@ input:-moz-placeholder, textarea::-moz-placeholder {
   border-color: #dad8de;
   font-size: 13px;
   border-radius: 0;
-  color: rgba(44, 50, 66, 0.35);
+  color: rgba(44, 50, 66, 0.8);
   padding: 0 8px; }
   .border-input:focus {
-    color: rgba(44, 50, 66, 0.75); }
+    color: #2c3242; }
 
 .border-input ~ .focus-border {
   position: absolute;
@@ -310,9 +313,15 @@ label {
     box-shadow: 0px 0px 2px 7px rgba(173, 0, 0, 0); } }
 
 .modal-content {
-  border-radius: 0 15px 0 15px !important;
+  border-radius: 0 !important;
   border: 0 !important;
-  font-family: "Montserrat", sans-serif; }
+  font-family: "Montserrat", sans-serif;
+  cursor: pointer; }
+  .modal-content .modal-close {
+    position: absolute;
+    right: -40px;
+    width: 30px;
+    top: -3px; }
   .modal-content .modal-title {
     text-transform: uppercase;
     color: #002e47;
