--- a/src/styles/homeStyle.css
+++ b/src/styles/homeStyle.css
@@ -309,6 +309,9 @@ label {
   90% {
     box-shadow: 0px 0px 2px 7px rgba(173, 0, 0, 0); } }
 
+.overflow-hidden {
+  overflow-y: hidden; }
+
 .homeWrap .slide-1 {
   background: url("../images/slide1.jpg") no-repeat;
   display: flex;
