--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -16,6 +16,7 @@ $lightGreyColor:#575757;
 $redColor:red;
 $searchIconColor:#000;
 $whiteColor:#ffffff;
+
 // Input Style
 $inputBorderColor:#dad8de;
 $inputFocusBorderColor:#ff8500;
@@ -25,6 +26,10 @@ $touchSpinBtnColor:rgba(44,50,66,.65);
 $placholderTextColor:rgba(44, 50, 66, 0.35);
 $listShowsPlacholderTextColor:#ffffff;
 $inputTextColor:#3f3f3f;
+
+// Blog Style
+$blogBG:#6b7c93;
+
 // Tag style
 $reactTagsBG:rgba(214, 213, 213, 0.2);
 $reactTagsTextColor:rgba(44,50,66,.32);
