--- a/src/styles/_commonStyle.scss
+++ b/src/styles/_commonStyle.scss
@@ -3,378 +3,452 @@
 @import 'mixins';
 $pad20:20px;
 $pad40:40px;
-body{
-  font-family:$fontFamily;
+body {
+    font-family: $fontFamily;
 }
-.width-100{
-  max-width:100%;
+
+.width-100 {
+    max-width: 100%;
 }
-.ml-auto{
-  margin-left:auto;
+
+.ml-auto {
+    margin-left: auto;
 }
-button{
-  cursor:pointer;
+
+button {
+    cursor: pointer;
 }
-.cursor-pointer{
-  cursor:pointer;
+
+.cursor-pointer {
+    cursor: pointer;
 }
-.underline-none:hover,.underline-none{
-  text-decoration:none;
-  outline:none;
+
+.underline-none:hover,
+.underline-none {
+    text-decoration: none;
+    outline: none;
 }
-button:hover,button:focus,input:hover,input:focus,video:hover,video:focus,textarea:hover,textarea:focus,.select-input:focus{
-  outline:none;
+
+button:hover,
+button:focus,
+input:hover,
+input:focus,
+video:hover,
+video:focus,
+textarea:hover,
+textarea:focus,
+.select-input:focus {
+    outline: none;
 }
-video{
-  width:100%;
-  height:100%;
+
+video {
+    width: 100%;
+    height: 100%;
 }
+
 $pad5:5px;
-.show{
-  display: block!important;
-}
-.main-btn,.button-primary,.button-secondary{
-  font-size: $fontSizeBtn;
-  font-weight: $fontMedium;
-  font-family: $fontFamily;
-  padding: 0 15px;
-  border-radius: $btnRadius;
-  display: inline-block;
-  border-width: 0px;
-  background:$buttonBG;
-  color:$mainBtnTextColor;
-  transition: all .15s ease;
-  cursor: pointer;
-  text-decoration: none;
-  height:$btnHeight;
-
-}
-.button-secondary{
-  background-color:$secondaryButtonBG;
-  color:$secondaryButtonColor;
+.show {
+    display: block !important;
 }
 
-
-.main-btn-sm{
-  @extend .main-btn;
-  padding: 0px 0px;
-  height:$btnHeight - 5px  ;
-  font-size: $fontSizeHeaderBtn;
-}
-.pt-0{
-  padding-top:0!important;
-}
-.p-0{
-  padding:0!important;
-}
-.height-100{
-    height:100vh!important;
-}
-.h-100{
-  height:100%;
-}
-.mt-5{
-  margin-top:5px!important;
-}
-.mb-5{
-  margin-bottom:5px!important;
-}
-.mr-10{
-  margin-right:10px;
-}
-.ml-10{
-  margin-left:10px;
-}
-.mb-10{
-  margin-bottom:10px!important;
-}
-.mb-20{
-  margin-bottom:20px;
-}
-.mb-0{
-  margin-bottom:0!important
-}
-.pt-10{
-  padding-top:10px!important
-}
-.ptb-5{
-  padding-top:5px!important;
-  padding-bottom:5px!important;
-}
-.mt-auto{
-  margin-top:auto!important;
-}
-.min-width-0{
-  min-width:0;
-}
-.pos-rel{
-  position:relative;
+.main-btn,
+.button-primary,
+.button-secondary {
+    font-size: $fontSizeBtn;
+    font-weight: $fontMedium;
+    font-family: $fontFamily;
+    padding: 0 15px;
+    border-radius: $btnRadius;
+    display: inline-block;
+    border-width: 0px;
+    background: $buttonBG;
+    color: $mainBtnTextColor;
+    transition: all .15s ease;
+    cursor: pointer;
+    text-decoration: none;
+    height: $btnHeight;
 }
 
-.main-btn:hover,.main-btn-sm:hover{
-  transform: translateY(-2px) !important;
-  -webkit-transform: translateY(-2px) !important;
-  -ms-transform: translateY(-2px) !important;
-  // box-shadow: 0 8px 15px -8px $btnHoverShadowColor;
+.button-secondary {
+    background-color: $secondaryButtonBG;
+    color: $secondaryButtonColor;
 }
-.pad-0{
-  padding:0!important;
+
+.main-btn-sm {
+    @extend .main-btn;
+    padding: 0px 0px;
+    height: $btnHeight - 5px;
+    font-size: $fontSizeHeaderBtn;
 }
-.hide{
-  display:none;
+
+.pt-0 {
+    padding-top: 0 !important;
 }
-.show{
-  display:block;
+
+.p-0 {
+    padding: 0 !important;
 }
-.show-inline{
-  display:inline-block;
+
+.height-100 {
+    height: 100vh !important;
 }
-.float-left{
-  float:left!important;
+
+.h-100 {
+    height: 100%;
 }
+
+.mt-5 {
+    margin-top: 5px !important;
+}
+
+.mb-5 {
+    margin-bottom: 5px !important;
+}
+
+.mr-10 {
+    margin-right: 10px;
+}
+
+.ml-10 {
+    margin-left: 10px;
+}
+
+.mb-10 {
+    margin-bottom: 10px !important;
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.mb-0 {
+    margin-bottom: 0 !important
+}
+
+.pt-10 {
+    padding-top: 10px !important
+}
+
+.ptb-5 {
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+}
+
+.mt-auto {
+    margin-top: auto !important;
+}
+
+.min-width-0 {
+    min-width: 0;
+}
+
+.pos-rel {
+    position: relative;
+}
+
+.main-btn:hover,
+.main-btn-sm:hover {
+    transform: translateY(-2px) !important;
+    -webkit-transform: translateY(-2px) !important;
+    -ms-transform: translateY(-2px) !important; // box-shadow: 0 8px 15px -8px $btnHoverShadowColor;
+}
+
+.pad-0 {
+    padding: 0 !important;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+.show-inline {
+    display: inline-block;
+}
+
+.float-left {
+    float: left !important;
+}
+
 .animated {
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-.truncate-text{
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-.mt-auto{
-  margin-top:auto;
-}
-.gap-top-20{
-  padding-top:20px;
-}
-.flex-1{
-  flex:1;
-}
-.flex-0{
-  flex:0!important;
-}
-.flex-label-1{
-  flex:1!important;
-}
-.flex-100{
-  flex:0 0 100%!important;
-}
-.flex-50{
-  flex:0 0 50%!important;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 }
 
-.btn-medium{
-  width:130px;
-}
-.btn-notify{
-  width:100px;
-  height:30px;
-}
-.btn-small{
-  width:90px;
+.truncate-text {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
-.error-limit,.error{
-  color:$redColor!important;
+.mt-auto {
+    margin-top: auto;
+}
+
+.gap-top-20 {
+    padding-top: 20px;
+}
+
+.flex-1 {
+    flex: 1;
+}
+
+.flex-0 {
+    flex: 0 !important;
+}
+
+.flex-label-1 {
+    flex: 1 !important;
+}
+
+.flex-100 {
+    flex: 0 0 100% !important;
+}
+
+.flex-50 {
+    flex: 0 0 50% !important;
+}
+
+.btn-medium {
+    width: 130px;
+}
+
+.btn-notify {
+    width: 100px;
+    height: 30px;
+}
+
+.btn-small {
+    width: 90px;
+}
+
+.error-limit,
+.error {
+    color: $redColor !important;
 }
 
 // Placeholder Style
-input::-webkit-input-placeholder,textarea::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: $placholderTextColor;
-  opacity:1;
-}
-input::-moz-placeholder,textarea::-moz-placeholder { /* Firefox 19+ */
-  color: $placholderTextColor;
-  opacity:1;
-}
-input:-ms-input-placeholder,textarea:-ms-input-placeholder { /* IE 10+ */
-  color: $placholderTextColor;
-  opacity:1;
-}
-input:-moz-placeholder,textarea::-moz-placeholder { /* Firefox 18- */
-  color: $placholderTextColor;
-  opacity:1;
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: $placholderTextColor;
+    opacity: 1;
 }
 
-
-
-.resize-none{
-  resize:none;
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+    /* Firefox 19+ */
+    color: $placholderTextColor;
+    opacity: 1;
 }
 
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+    /* IE 10+ */
+    color: $placholderTextColor;
+    opacity: 1;
+}
 
-.border-input,.select-input{
-  height:35px;
-  width:100%;
-  border-width:0 0 1px 0;
-  border-style:solid;
-  border-color:$inputBorderColor;
-  font-size:$tubeinInputFontSize;
-  border-radius:0;
-  color:$inputFieldColor;
-  padding:0 8px;
-  font-weight:$fontMedium;
-  &:focus{
-    color:$inputFocusTextColor;
-    // border-color:$inputFocusBorderColor;
-  }
+input:-moz-placeholder,
+textarea::-moz-placeholder {
+    /* Firefox 18- */
+    color: $placholderTextColor;
+    opacity: 1;
 }
-.select-input{
-  -webkit-appearance:none;
-  appearance: none;
-  background:transparent;
-  outline:none;
+
+.resize-none {
+    resize: none;
 }
-.select-dropdown{
-  position: relative;
+
+.border-input,
+.select-input {
+    height: 35px;
+    width: 100%;
+    border-width: 0 0 1px 0;
+    border-style: solid;
+    border-color: $inputBorderColor;
+    font-size: $tubeinInputFontSize;
+    border-radius: 0;
+    color: $inputFieldColor;
+    padding: 0 8px;
+    font-weight: $fontMedium;
+    &:focus {
+        color: $inputFocusTextColor; // border-color:$inputFocusBorderColor;
+    }
 }
-.select-dropdown:after{
-  content: '';
-  position: absolute;
-  right:3px;
-  top:17px;
-  border-top: 8px solid $buttonBG;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  display: inline-block;
+
+.select-input {
+    -webkit-appearance: none;
+    appearance: none;
+    background: transparent;
+    outline: none;
 }
-textarea.border-input{
-  height:60px;
+
+.select-dropdown {
+    position: relative;
 }
-.border-input ~ .focus-border,.select-input ~ .focus-border{
-  position: absolute;
-  bottom: 0px;
-  left: 50%;
-  width: 0;
-  height: 2px;
-  z-index: 99;
-  
-  background-color: $inputFocusBorderColor;
-  transition: 0.4s;
+
+.select-dropdown:after {
+    content: '';
+    position: absolute;
+    right: 3px;
+    top: 17px;
+    border-top: 8px solid $buttonBG;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    display: inline-block;
+}
+
+textarea.border-input {
+    height: 60px;
+}
+
+.border-input~.focus-border,
+.select-input~.focus-border {
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 0;
+    height: 2px;
+    z-index: 99;
+    background-color: $inputFocusBorderColor;
+    transition: 0.4s;
 }
 
 // textarea.border-input ~ .focus-border{
 //   bottom:-2px;
 // }
-.border-input:focus ~ .focus-border {
-  width: 100%;
-  transition: 0.4s;
-  left:0;
-}
-.form-group{
-  position: relative;
+.border-input:focus~.focus-border {
+    width: 100%;
+    transition: 0.4s;
+    left: 0;
 }
 
-.form-control{
-  border-color:$lightGreyColor;
-  &:focus{
-    border-color:$inputFocusBorder!important;
-    box-shadow:none!important;
-  }
+.form-group {
+    position: relative;
 }
 
-.page-heading{
-  color:#002e47;
-  font-size:24px;
-  font-family:$fontFamily;
-  font-weight:bold;
-  margin-bottom:60px;
-}
-.modal-link{
-  font-size:14px;
-  font-family:$fontFamily;
-  color: #002e47;
-  cursor: pointer;
-  font-weight:$fontMedium;
-
+.form-control {
+    border-color: $lightGreyColor;
+    &:focus {
+        border-color: $inputFocusBorder !important;
+        box-shadow: none !important;
+    }
 }
 
-.password-visibility{
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  cursor: pointer;
-  font-size:20px;
+.page-heading {
+    color: #002e47;
+    font-size: 24px;
+    font-family: $fontFamily;
+    font-weight: bold;
+    margin-bottom: 60px;
+}
+
+.modal-link {
+    font-size: 14px;
+    font-family: $fontFamily;
+    color: #002e47;
+    cursor: pointer;
+    font-weight: $fontMedium;
+}
+
+.password-visibility {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    cursor: pointer;
+    font-size: 20px;
 }
 
 label {
-  font-size: 15px;
-  font-family: $fontFamily;
-  font-weight:$fontNormal;
-  color:$modalLabelColor;
+    font-size: 15px;
+    font-family: $fontFamily;
+    font-weight: $fontNormal;
+    color: $modalLabelColor;
 }
 
 @-webkit-keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .fadeIn {
-  -webkit-animation-name: fadeIn;
-  animation-name: fadeIn;
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
 }
+
 @-moz-keyframes heartbit {
-  0% {
-    -moz-transform: scale(0);
-    opacity: 0.0; }
-  25% {
-    -moz-transform: scale(0.1);
-    opacity: 0.1; }
-  50% {
-    -moz-transform: scale(0.5);
-    opacity: 0.3; }
-  75% {
-    -moz-transform: scale(0.8);
-    opacity: 0.5; }
-  100% {
-    -moz-transform: scale(1);
-    opacity: 0.0; }
-  }
+    0% {
+        -moz-transform: scale(0);
+        opacity: 0.0;
+    }
+    25% {
+        -moz-transform: scale(0.1);
+        opacity: 0.1;
+    }
+    50% {
+        -moz-transform: scale(0.5);
+        opacity: 0.3;
+    }
+    75% {
+        -moz-transform: scale(0.8);
+        opacity: 0.5;
+    }
+    100% {
+        -moz-transform: scale(1);
+        opacity: 0.0;
+    }
+}
 
 @-webkit-keyframes heartbit {
-  0% {
-    -webkit-transform: scale(0);
-    opacity: 0.0; }
-  25% {
-    -webkit-transform: scale(0.1);
-    opacity: 0.1; }
-  50% {
-    -webkit-transform: scale(0.5);
-    opacity: 0.3; }
-  75% {
-    -webkit-transform: scale(0.8);
-    opacity: 0.5; }
-  100% {
-    -webkit-transform: scale(1);
-    opacity: 0.0; }
-  }
-  @keyframes pulse{
-  	0%{
-  		box-shadow: 0px 0px 2px 0px rgba(173,0,0,.45);
-  	}
-  	65%{
-  		box-shadow: 0px 0px 2px 4px rgba(173,0,0,.45);
-  	}
-  	90%{
-  		box-shadow: 0px 0px 2px 7px rgba(173,0,0,0);
-  	}
-  }
+    0% {
+        -webkit-transform: scale(0);
+        opacity: 0.0;
+    }
+    25% {
+        -webkit-transform: scale(0.1);
+        opacity: 0.1;
+    }
+    50% {
+        -webkit-transform: scale(0.5);
+        opacity: 0.3;
+    }
+    75% {
+        -webkit-transform: scale(0.8);
+        opacity: 0.5;
+    }
+    100% {
+        -webkit-transform: scale(1);
+        opacity: 0.0;
+    }
+}
 
-
+@keyframes pulse {
+    0% {
+        box-shadow: 0px 0px 2px 0px rgba(173, 0, 0, .45);
+    }
+    65% {
+        box-shadow: 0px 0px 2px 4px rgba(173, 0, 0, .45);
+    }
+    90% {
+        box-shadow: 0px 0px 2px 7px rgba(173, 0, 0, 0);
+    }
+}
