My Videos UI Design

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -16,7 +16,8 @@ $lightGreyColor:#575757;
 $redColor:red;
 $searchIconColor:#000;
 $whiteColor:#ffffff;
-
+$primaryColor:#002e47;
+$secondaryColor:#ff8500;
 // Input Style
 $inputBorderColor:#dad8de;
 $inputFocusBorderColor:#ff8500;
