--- a/src/styles/BlogStyle.scss
+++ b/src/styles/BlogStyle.scss
@@ -3,7 +3,7 @@
 $pad10:10px;
 $pad25:25px;
 .blog-wrapper {
-    padding: 20px;
+    padding: 30px 30px 10px;
     .video-div,
     .blog-image {
         background: $blogBG;
@@ -11,6 +11,7 @@ $pad25:25px;
     .video-wrapper {
         position: relative;
         border-radius: 5px;
+        
         .video-overlay {
             position: absolute;
             left: 0;
@@ -18,13 +19,27 @@ $pad25:25px;
             background: rgba(0, 0, 0, .47);
             width: 100%;
             height: 100%;
-            display: none;
+            display: none!important;
             top: 0;
             bottom: 0;
         }
+        .video-play-icon {
+            color: $whiteColor;
+            font-size: 30px;
+            padding: 3px 14px 0;
+            border: 3px solid #fff;
+            width: 55px;
+            height: 55px;
+            border-radius:50%;
+            cursor: pointer;
+            &:hover{
+                border-color:$secondaryColor;
+                color:$secondaryColor;
+            }
+        }
         &:hover {
             .video-overlay {
-                display: block;
+                display: flex!important;
             }
         }
     }
@@ -32,5 +47,29 @@ $pad25:25px;
         width: 100%;
         height: 100%;
         object-fit: cover;
+    }
+    .video-block{
+        margin-bottom: 20px;
+        .video-btm-play-icon{
+            color: $whiteColor;
+            font-size: 18px;
+            background:transparent;
+            border:none;
+            padding:0 5px;
+            outline: none;
+        }
+        .full-screen-btn{
+            color: $whiteColor;
+            font-size: 18px;
+            background:transparent;
+            border:none;
+            padding:0 5px;
+            outline: none;
+        }
+    }
+    .video-controls{
+        height:40px;
+        background:$primaryColor;
+        padding:5px 10px;
     }
 }
