--- a/src/styles/FooterStyles.css
+++ b/src/styles/FooterStyles.css
@@ -371,6 +371,11 @@ footer {
     font-weight: 500;
     margin-bottom: 0;
     text-align: left; }
+    @media only screen and (max-width: 767px) {
+      footer .contact-details {
+        text-align: center !important; }
+        footer .contact-details.text-right {
+          margin-top: 5px; } }
   footer .social-icon {
     display: inline-block;
     width: 30px;
